# synapse

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0eebceb63fdd_create_conversations_and_messages_tables.py  18a501b95b60_inital.py  3f6e599117bb_add_summary_and_last_summarized_message_.py  4190ab62f507_add_documents_table.py  4a76dfb72212_rename_last_summarised_message_id_.py  6d0740838791_test.py  8483b37a15dd_add_document_count_to_conversations.py  b88017823297_rename_last_summarised_message_id_.py  ee257ceecfbe_initial_schema.py
backend/app/: main.py
backend/app/ai/: llm.py  schema.py
backend/app/ai/graph/: graph.py  nodes.py  state.py
backend/app/ai/prompts/: chat.py
backend/app/ai/rag/: client.py  collections.py  embeddings.py  vectorStore.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/features/auth/: dependencies.py  model.py  router.py  schemas.py  service.py
backend/app/features/chat/: router.py  schemas.py  service.py
backend/app/features/conversations/: models.py  router.py  schemas.py  service.py
backend/app/features/documents/: dependency.py  model.py  processing.py  router.py  schemas.py  service.py
backend/app/features/health/: router.py
backend/app/integretions/s3/: client.py  constants.py  service.py
backend/app/integretions/taviily/: tavily.py
backend/tests/: conftest.py
backend/tests/features/conversations/: test_conversations.py
backend/tests/features/health/: test_health.py
(+81 files in other folders)
